--- a/Purva_Sikri.Rmd
+++ b/Purva_Sikri.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:42:51-5:00"
-#description: 
+description: Hi i am Purva Sikri and this is my project.
 draft: false
 image: img_preprog_website.jpg 
 keywords: ""
