--- a/content/blogs/Purva_Sikri.Rmd
+++ b/content/blogs/Purva_Sikri.Rmd
@@ -304,11 +304,11 @@ getwd()
 > 5. Heavey live stock 
 
 #### The **cheapest** animals to rescue are:
-> 1. Squirrels 
-> 2. Ferrets
-> 3. Rabbits
+> 1. Squirrel
+> 2. Ferret
+> 3. Rabbit
 
-> From these observations, it can be infered that the **size/weight** of the animal is positively correlated with the cost of rescuing (i.e. the heavier or bigger the animal the more time it takes to be resuced incurring higher costs). Further, another consideration could be that the more dangerous the animal the more time consuming it is to rescue, in turn incurring high costs (snakes are more expensive to rescue but are smaller than dogs - it could be that a snake's rescuing may require more protective equipments increasing the average time and costs). It is also noteworthy to mention that the count of cats, dogs, and birds being rescued is the highest (may be due to in house incidents with pets).
+> From these observations, it can be infered that the **size/weight** of the animal is positively correlated with the cost of rescuing (i.e. the heavier or bigger the animal the more time it takes to be resuced incurring higher costs). Further, another consideration could be that the more dangerous the animal the more time consuming it is to rescue, in turn incurring high costs (snakes are more expensive to rescue but are smaller than dogs - could be that a snake's rescuing may require more protective equipments increasing the average time and costs). It is also noteworthy to mention that the count of cats, dogs, and birds being rescued is the highest (may be due to in house incidents with pets).
 >
 > **Spread of the distributions**: Although there are no normal distributions, some of the higher skewed costs for resuing animals are for - cats, birds, deers, dogs, fox, and other unkown animals. This means that the cost to rescue the above-mentioned animals is mostly lower, however, they do have a few extreme values (outliers). 
 
