--- a/content/blogs/homework3.Rmd
+++ b/content/blogs/homework3.Rmd
@@ -6,11 +6,11 @@ date: "2017-10-31T22:42:51-05:00"
 description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
   sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
   sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-  consequat tincidut. Vivamus et sagittis tempus.
+  consequat tincidunt. Vivamus et sagittis tempus.
 draft: false
-image: RTI.jpg
+image: pic07.jpg
 keywords: ""
-slug: purva12
+slug: purva
 title: Purva
 ---
 
