--- a/blogrep.Rmd
+++ b/blogrep.Rmd
@@ -13,7 +13,7 @@ title: Research papers and Articles
 
 *Research Paper 1:* 
 
-![image1](https://drive.google.com/file/d/1Tc26fOAsZvIzSryPMN-9v29x-LjO8HrQ/view?usp=sharing)
+![image1](/Users/purvasikri/Desktop/my_website/static/img/blogs/Capture.png)
 
 While the Media agencies, Financial sector, and State agencies are captured - is the general public even getting the right information? the paper titled **"Cognitive capture: a euphemism for malfeasance?"** explains what capture means, is types, and how any form of it (financial, media, or state) are detrimental to any country. 
 
@@ -23,7 +23,7 @@ The full research paper is available for view and download here [Cognitive captu
 
 *Research Paper 2:*
 
-![image2](https://drive.google.com/file/d/1VAERyb_AmrgX5fI5d6OKAaT093KsnEE4/view?usp=sharing)
+![image2](/Users/purvasikri/Desktop/my_website/static/img/blogs/RTIpaper.png)
 
 The second paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.  
 
