--- a/blogrep.Rmd
+++ b/blogrep.Rmd
@@ -15,7 +15,7 @@ title: Research papers and Articles
 
 ![image1](/Users/purvasikri/Desktop/my_website/static/img/blogs/Capture.png)
 
-While the Media agencies, Financial sector, and State agencies are captured - is the general public even getting the right information? the paper titled **"Cognitive capture: a euphemism for malfeasance?"** explains what capture means, is types, and how any form of it (financial, media, or state) are detrimental to any country. 
+While the Media agencies, Financial sector, and State agencies are captured - is the general public even getting the right information? the paper titled **"Cognitive capture: a euphemism for malfeasance?"** explains what capture means, its types, and how any form of it (financial, media, or state) are detrimental to any country. 
 
 The full research paper is available for view and download here [Cognitive capture](https://drive.google.com/file/d/1msoVe4j1qUo3nLU_CUcrLPBaA4go1zns/view?usp=sharing)
 
