--- a/blogrep.Rmd
+++ b/blogrep.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:26:09-05:00"
 description: ""
 draft: false
-image: 
+image: Capture.png
 keywords: ""
 slug: magna
 title: Research papers and Articles 
@@ -14,21 +14,17 @@ title: Research papers and Articles
 
 *Research Paper 1:* 
 
-![I1](/Users/purvasikri/Desktop/my_website/static/img/blogs/Capture.png)
+The second paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.  
 
-While the Media agencies, Financial sector, and State agencies are captured - is the general public even getting the right information? the paper titled **"Cognitive capture: a euphemism for malfeasance?"** explains what capture means, its types, and how any form of it (financial, media, or state) are detrimental to any country. 
-
-The full research paper is available for view and download here [Cognitive capture](https://drive.google.com/file/d/1msoVe4j1qUo3nLU_CUcrLPBaA4go1zns/view?usp=sharing)
+The full research paper is available for view and download here [RTI during COVID-19](https://drive.google.com/file/d/1yLdU4vgox8-lbcMZah_dI2N4zk5x-JMZ/view?usp=sharing)
 
 ---
 
 *Research Paper 2:*
 
-![I2](/Users/purvasikri/Desktop/my_website/static/img/blogs/RTIpaper.png)
+While the Media agencies, Financial sector, and State agencies are captured - is the general public even getting the right information? the paper titled **"Cognitive capture: a euphemism for malfeasance?"** explains what capture means, its types, and how any form of it (financial, media, or state) are detrimental to any country. 
 
-The second paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.  
-
-The full research paper is available for view and download here [RTI during COVID-19](https://drive.google.com/file/d/1yLdU4vgox8-lbcMZah_dI2N4zk5x-JMZ/view?usp=sharing)
+The full research paper is available for view and download here [Cognitive capture](https://drive.google.com/file/d/1msoVe4j1qUo3nLU_CUcrLPBaA4go1zns/view?usp=sharing)
 
 ---
 
