--- a/blogrep.Rmd
+++ b/blogrep.Rmd
@@ -11,10 +11,9 @@ slug: magna
 title: Research papers and Articles 
 ---
 
-
 *Research Paper 1:* 
 
-The second paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.  
+The first paper titled **"Impact of COVID-19 on RTI, a comparative perspective from India to EU"** delineates the wringing of Right to Information during the COVID-19 pandemic. It delves into the political, social, and economic situation of India and the EU to understand why information asymmetry was so rampant and whether the media was captured by the government (out of fear or bribery) or were the polices such that RTI was given a much lower stance and constantly behind.  
 
 The full research paper is available for view and download here [RTI during COVID-19](https://drive.google.com/file/d/1yLdU4vgox8-lbcMZah_dI2N4zk5x-JMZ/view?usp=sharing)
 
