--- a/content/blogs/blogrep.Rmd
+++ b/content/blogs/blogrep.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:26:09-05:00"
 description: ""
 draft: false
-image: Capture.png
+image: RTIpaper.png
 keywords: ""
 slug: magna
 title: Research papers and Articles 
