--- a/content/blogs/homework2.Rmd
+++ b/content/blogs/homework2.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
-image: RTIpaper.png
+image: rmds.png
 keywords: ""
 slug: rti1
 title: Rmarkdown project on dplyr, tidyverse, ggplot, and t-test (using bootstrap).
