--- a/content/blogs/homework3.Rmd
+++ b/content/blogs/homework3.Rmd
@@ -2,16 +2,13 @@
 categories:
 - ""
 - ""
-date: "2017-10-31T22:42:51-05:00"
-description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
-  sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
-  sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-  consequat tincidunt. Vivamus et sagittis tempus.
+date: "2017-10-31T22:26:13-05:00"
+description: ""
 draft: false
-image: pic07.jpg
+image: Bitcoin_inside.png
 keywords: ""
-slug: purva
-title: Purva
+slug: blockchain
+title: EDA and data analysis  
 ---
 
 
