--- a/content/blogs/blog5.Rmd
+++ b/content/blogs/blog5.Rmd
@@ -3,10 +3,10 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:42:51-05:00"
-description: A data analysis on whether banks should use target adverisment to attract only the profitable customers. Performing a cost   benefit analysis to see if a reduction in advertisment costs will lead to an increased profitability in the short as well as long       term.   
+description: In an All-India case study competition, we were asked to check for the feasibilty (via cost-benefit analysis) of blockchain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initital investment being USD 1.34 billion), blockchian can be applied. 
 draft: false
-image: ROC.png
+image: personalbit.png
 keywords: ""
-slug: ipsum
-title: Using target banking to find new saving account holders
+slug: last
+title: Testing for feasibility of blockchian for logistic companies 
 ---
