--- a/content/blogs/blog5.Rmd
+++ b/content/blogs/blog5.Rmd
@@ -10,3 +10,22 @@ keywords: ""
 slug: last
 title: Testing for feasibility of blockchian for logistic companies 
 ---
+
+In an All-India case study competition, we were asked to check for the feasibilty (via cost-benefit analysis) of blockchain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initital investment being USD 1.34 billion), blockchian can be applied. 
+
+Attached below is the powerpoint with the analysis and conclusion
+
+```{r picture, echo=FALSE, out.width="70%"}
+knitr::include_graphics("/img/1.png", error = FALSE)
+knitr::include_graphics("/img/2.png", error = FALSE)
+knitr::include_graphics("/img/3.png", error = FALSE)
+knitr::include_graphics("/img/4.png", error = FALSE)
+knitr::include_graphics("/img/5.png", error = FALSE)
+knitr::include_graphics("/img/6.png", error = FALSE)
+knitr::include_graphics("/img/7.png", error = FALSE)
+knitr::include_graphics("/img/8.png", error = FALSE)
+knitr::include_graphics("/img/9.png", error = FALSE)
+knitr::include_graphics("/img/10.png", error = FALSE)
+
+```
+
