--- a/content/blogs/blog5.Rmd
+++ b/content/blogs/blog5.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:42:51-05:00"
-description: In an All-India case study competition, we were asked to check for the feasibilty (via cost-benefit analysis) of blockchain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initital investment being USD 1.34 billion), blockchian can be applied. 
+description: In an All-India case study competition, we were asked to check for the feasibility (via cost-benefit analysis) of block chain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initial investment being USD 1.34 billion), block chain can be applied.  
 draft: false
 image: personalbit.png
 keywords: ""
@@ -11,9 +11,9 @@ slug: last
 title: Testing for feasibility of blockchian for logistic companies 
 ---
 
-In an All-India case study competition, we were asked to check for the feasibilty (via cost-benefit analysis) of blockchain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initital investment being USD 1.34 billion), blockchian can be applied. 
+In an All-India case study competition, we were asked to check for the feasibility (via cost-benefit analysis) of block chain   in any industry of choice. Therefore, after choosing the logistic sector (as it needs the most amount of coordination), the research was narrowed down to IBM and Maersk. Post performing the analysis, it was concluded that since the cost will decrease by USD 16 billion and the revenue will increase by USD 42 billion in the coming seven years (the initial investment being USD 1.34 billion), block chain can be applied. 
 
-Attached below is the powerpoint with the analysis and conclusion
+Attached below is the power point with the analysis and conclusion
 
 ```{r picture, echo=FALSE, out.width="70%"}
 knitr::include_graphics("/img/1.png", error = FALSE)
