--- a/content/blogs/homework2.Rmd
+++ b/content/blogs/homework2.Rmd
@@ -5,6 +5,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
+image: Rdat2.png
 keywords: ""
 slug: rti1
 title: Dplyr, tidyverse, ggplot, and t-test (using bootstrap).
@@ -26,10 +27,9 @@ knitr::opts_chunk$set(
   fig.height=6.75,
   fig.align = "center"
 )
-
-
 ```
 
+### Loading the necessary libraries 
 ```{r load-libraries, include=FALSE}
 library(tidyverse)
 library(mosaic)
@@ -47,10 +47,10 @@ library(infer)
 set.seed(1) #making results replicable by setting seed
 ```
 
-# Climate change and temperature anomalies 
+# Ananlysis 1 on Climate change and temperature anomalies 
 
-## Loading the data 
 
+### Loading the data 
 ```{r weather_data, cache=TRUE}
 weather <- 
   read_csv("https://data.giss.nasa.gov/gistemp/tabledata_v4/NH.Ts+dSST.csv", 
@@ -58,8 +58,7 @@ weather <-
            na = "***")
 ```
 
-## Tidying the data using select() and pivot_longer()
-
+### Tidying the data 
 ```{r tidyweather}
 tidyweather <- weather %>%
   select(1:13) %>% #Selecting Year and month variables
@@ -67,13 +66,11 @@ tidyweather <- weather %>%
 ```
 
 ### Checking for year, month, and delta columns in the tidyweather dataframe
-
 ```{r}
 skim(tidyweather)
 ```
 
-## Plotting Information
-
+### Plotting Information
 ```{r scatter_plot}
 #Creating date variables for the tidyweather dataset
 tidyweather <- tidyweather %>% 
@@ -94,8 +91,7 @@ ggplot(tidyweather, aes(x=date, y = delta))+  #Plotting delta by date
   NULL
 ```
 
-### Scatterplot for each month using facet_wrap()
-
+### Scatterplot for each month
 ```{r facet_wrap}
 tidyweather %>%
   ggplot(aes(x=Year, y=delta)) + #Plotting delta by Year
@@ -111,12 +107,11 @@ tidyweather %>%
   NULL
 ```
 
-> Answer below
+> AInference 1:
 
 Although all of the graphs in the grid have a similar upwards trend, there are subtle differences in variability between months such as December/January and June/July. January is a month with much higher variability in weather while June does not. This is something that may be worth looking into for meteorologists.
 
 ### Creating an interval column for 1881-1920, 1921-1950, 1951-1980, 1981-2010
-
 ```{r intervals}
 comparison <- tidyweather %>% #New data frame called comparison
   filter(Year>= 1881) %>%     #remove years prior to 1881
@@ -131,7 +126,6 @@ comparison <- tidyweather %>% #New data frame called comparison
 ```
 
 ### Density plot to study the distribution of monthly deviations (`delta`), grouped by intervals we are interested in
-
 ```{r density_plot}
 ggplot(comparison, aes(x=delta, fill=interval)) +
   geom_density(alpha=0.2) +   #density plot with tranparency set to 20%
@@ -143,7 +137,6 @@ ggplot(comparison, aes(x=delta, fill=interval)) +
 ```
 
 ### Average annual anomalies
-
 ```{r averaging}
 average_annual_anomaly <- tidyweather %>%
   filter(!is.na(delta)) %>% #Removing rows with NA's in the delta column 
@@ -162,16 +155,12 @@ ggplot(average_annual_anomaly, aes(x=Year, y=annual_average_delta))+
   NULL
 ```
 
-## Confidence Interval for `delta`
+>Inference 2:
 
-[NASA points out on their website](https://earthobservatory.nasa.gov/world-of-change/decadaltemp.php) that 
+A one-degree global change is significant because it takes a vast amount of heat to warm all the oceans, atmosphere, and land by that much. In the past, a one- to two-degree drop was all it took to plunge the Earth into the Little Ice Age.
 
-> A one-degree global change is significant because it takes a vast amount of heat to warm all the oceans, atmosphere, and land by that much. In the past, a one- to two-degree drop was all it took to plunge the Earth into the Little Ice Age.
-
-Your task is to construct a confidence interval for the average annual delta since 2011, both using a formula and using a bootstrap simulation with the `infer` package. Recall that the dataframe `comparison` has already grouped temperature anomalies according to time intervals; we are only interested in what is happening  between 2011-present.
 
 ### Confidence interval for the average annual delta since 2011
-
 ```{r, calculate_CI_using_formula}
 formula_ci <- comparison %>% 
   group_by(interval) %>%
@@ -191,7 +180,6 @@ formula_ci
 ```
 
 ### Bootstrap Simulation
-
 ```{r, calculate_CI_using_bootstrap}
 boot_ci <- comparison %>%
   group_by(interval) %>%
@@ -204,14 +192,13 @@ boot_ci <- comparison %>%
 boot_ci
 ```
 
-> Answer below
+> Inference 3:
 
 We construct a 95% confidence interval both using the formula and a bootstrap simulation. The result shows that the true mean lies within the interval calculated with 95% confidence. The fact that this confidence interval does not contain zero shows that the difference between the means is statistically significant. Hence, using our result, we can conclude that the increase in temprature is statistically significant and that global warming is progressing. 
 
 
 
-# Biden's Approval Margins
-
+# Analysis 2 on Biden's Approval Margins
 ```{r, cache=TRUE}
 # Import approval polls data directly off fivethirtyeight website
 approval_polllist <- read_csv('https://projects.fivethirtyeight.com/biden-approval-data/approval_polllist.csv') 
@@ -231,7 +218,6 @@ glimpse(approval_polllist)
 
 
 ### Biden Approval Margin graph
-
 ```{r}
 plot <- approval_polllist %>%
   mutate(week=week(enddate)) %>% #Creating a new column called week by extracting the week from the enddate variable
@@ -267,16 +253,13 @@ ggsave(file='biden_plot.png', plot=plot, width=12, height=8) #Saving to adjust i
 knitr::include_graphics("biden_plot.png", error=F)
 ```
 
-## Compare Confidence Intervals
-
-> Answer below
+> Inference 4:
 
 The confidence interval for 'week 4' ranges from 9.14 to 19.6828 with a mean of 14.41 and standard deviation of 10.25, while 'week 25' ranges from 10.30 to 12.7523 with a mean of 11.53 and a standard deviation of 4.74. This is mainly due to the number of data points. For 'week 4' we only have 17 data points to work with, while 'week 25' has 60. With a larger set of data to work with, we are able to create narrower intervals with the same level of confidence. 
 
-# Challenge 1: Excess rentals in TfL bike sharing
+# Analysis 3 on Excess rentals in TfL bike sharing
 
-### Load and clean the latest Tfl data
-
+### Loading and cleaning the latest Tfl data
 ```{r, get_tfl_data, cache=TRUE}
 setwd('/Users/purvasikri/Desktop/my_website/data')
 url <- "https://data.london.gov.uk/download/number-bicycle-hires/ac29363e-e0cb-47cc-a97a-e216d900a6b0/tfl-daily-cycle-hires.xlsx"
@@ -298,8 +281,7 @@ bike <- bike0 %>%
           week = isoweek(day))
 ```
 
-### Graphs.
-
+### Graphs
 ```{r}
 # Clean the data 
 bike_exp <- bike %>%
@@ -331,7 +313,6 @@ knitr::include_graphics("bike1_plot.png", error=F)
 ```
 
 ### Percentage changes from the expected level of weekly rentals.
-blogdo
 ```{r}
 # Clean the data
 bike_exp_week <- bike %>%
@@ -369,27 +350,4 @@ ggsave(file='bike2_plot.png', plot=plot, width=12, height=8) # Create and save t
 knitr::include_graphics("bike2_plot.png", error=F)
 ```
 
-Should you use the mean or the median to calculate your expected rentals? Why?
-We use the mean to calculate the expected rentals.
-
-# Deliverables
-
-As usual, there is a lot of explanatory text, comments, etc. You do not need these, so delete them and produce a stand-alone document that you could share with someone. Knit the edited and completed R Markdown file as an HTML document (use the "Knit" button at the top of the script editor window) and upload it to Canvas.
-
-# Details
-
-- Who did you collaborate with: Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni, Purva Sikri, Junna Yanai
-- Approximately how much time did you spend on this problem set: 10hrs
-- What, if anything, gave you the most trouble: The details in replicating graphs
-
-**Please seek out help when you need it,** and remember the [15-minute rule](https://mam202.netlify.app/syllabus/#the-15-minute-rule){target=_blank}. You know enough R (and have enough examples of code from class and your readings) to be able to do this. If you get stuck, ask for help from others, post a question on Slack-- and remember that I am here to help too!  
-
-> As a true test to yourself, do you understand the code you submitted and are you able to explain it to someone else? 
-
-# Rubric
-
-Check minus (1/5): Displays minimal effort. Doesn't complete all components. Code is poorly written and not documented. Uses the same type of plot for each graph, or doesn't use plots appropriate for the variables being analyzed. 
-
-Check (3/5): Solid effort. Hits all the elements. No clear mistakes. Easy to follow (both the code and the output). 
-
-Check plus (5/5): Finished all components of the assignment correctly and addressed both challenges. Code is well-documented (both self-documented and with additional comments as necessary). Used tidyverse, instead of base R. Graphs and tables are properly labelled. Analysis is clear and easy to follow, either because graphs are labeled clearly or you've written additional text to describe how you interpret the output.
+In collaborate with: Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni, and Junna Yanai
