--- a/content/blogs/homework3.Rmd
+++ b/content/blogs/homework3.Rmd
@@ -5,7 +5,7 @@ categories:
 date: "2017-10-31T22:26:13-05:00"
 description: ""
 draft: false
-image: Bitcoin_inside.png
+image: Rdat.png
 keywords: ""
 slug: blockchain
 title: EDA and data analysis  
@@ -30,6 +30,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+### Loading all the necessary packages 
+
 ```{r load-libraries}
 library(tidyverse)
 library(mosaic)
@@ -48,7 +50,7 @@ library(dbplyr)
 library(DBI)
 ```
 
-# Youth Risk Behavior Surveillance
+# Performing an analysis on Youth Risk Behavior Surveillance
 
 Every two years, the Centers for Disease Control and Prevention conduct the [Youth Risk Behavior Surveillance System (YRBSS)](https://www.cdc.gov/healthyyouth/data/yrbs/index.htm) survey, where it takes data from high schoolers (9th through 12th grade), to analyze health patterns. You will work with a selected group of variables from a random sample of observations during one of the years the YRBSS was conducted.
 
@@ -126,12 +128,12 @@ yrbss %>%
   NULL
 ```
 
->Answer below
+>Inference 1
 
 Although, the weights of the people that exercise more or less than 3 days appear to be familiar, there **is a relationship** between the level of physical activity and respective weight. Weight appears to be more clustered for the people that exercise over 3 days and there are evidently more outliers (higher weight) for the people exercising less than 3 days. Therefore, we infer that exercising is helpful in maintaining weight.
 Nonetheless, it is important to keep in mind that there are some people that do weight training to put on muscle (in tuen increasing weight), weights may not be the best indicator of fitness. 
 
-## Confidence Interval
+## Calculating the confidence Interval
 
 ```{r, ci_using_formulas}
 yrbss %>% 
@@ -149,7 +151,7 @@ yrbss %>%
 
 There is an observed difference of about 1.77kg (68.44 - 66.67), and we notice that the two confidence intervals do not overlap. It seems that the difference is at least 95% statistically significant. Let us also conduct a hypothesis test.
 
-## Hypothesis test with formula
+## Hypothesis testing 
 
 **Null:** There is **no difference** in weight means between people who are active more than or less than 3 days per week.
 
@@ -209,7 +211,7 @@ null_dist %>%
   get_p_value(obs_stat = obs_diff, direction = "two_sided")
 ```
 
-# IMDB ratings: Differences between directors
+# Analysis 2 on IMDB ratings: Differences between directors
 
 > Answer below
 
@@ -232,7 +234,7 @@ movies <- read_csv(here::here("data", "movies.csv"))
 glimpse(movies) #exploring the dataset 
 ```
 
-## Comparing directors by ratings of their movies
+### Comparing directors by ratings of their movies
 
 ```{r}
 directors <- c('Tim Burton', 'Steven Spielberg')
@@ -279,16 +281,16 @@ movies %>%
   NULL
 ```
 
-# Omega Group plc- Pay Discrimination
+# Analysis 3 on Omega Group plc- Pay Discrimination
 
-## Loading the data
+### Loading the data
 
 ```{r load_omega_data}
 omega <- read_csv(here::here("data", "omega.csv"))
 glimpse(omega) #Exploring the omega dataset
 ```
 
-## Relationship Salary - Gender ?
+### Relationship Salary - Gender ?
 
 ```{r, confint_single_valiables}
 # Summary Statistics of salary by gender
@@ -311,7 +313,7 @@ omega %>%
   as.data.frame()
 ```
 
-> Answer below
+> Inference 2
 
 Evidently, the **mean salary for females is lower than that of males**, but the variation for both the gender's is similar i.e. there is not a huge gap in the salary levels within each gender. Additionally, since the t-critical value is greater than 2, with 95% level of confidence, we can reject our null hypothesis that mean salary of males subtracted from the mean salary of females is zero (it is also worthwhile to notice that the confidence intervals do not overlap). 
 You can also run a hypothesis testing, assuming as a null hypothesis that the mean difference in salaries is zero, or that, on average, men and women make the same amount of money. You should tun your hypothesis testing using `t.test()` and with the simulation method from the `infer` package.
@@ -335,7 +337,7 @@ omega %>%
   get_p_value(obs_stat=obs_diff, direction='both')
 ```
 
-> Answer below
+> Inference 3:
 
 The p-value from the t-test is 0.0002 and from get_p_value is 0 (which is much lesser than the hurdle of 0.05). Therefore with 95% level of confidence, we can reject the **null hypothesis** that the mean difference in salaries is 0. Further, since this p-value seems improbable, it may be worthwhile to consider if there are floating-point numbers or there has been omission of important data points. 
 
@@ -348,11 +350,11 @@ favstats(experience ~ gender, data=omega)
 t.test(experience ~ gender, data=omega)
 ```
 
-> Answer below
+> Inference 4:
 
 This p-value below 0.05 suggests that at 95% confidence level we can **reject the null hypothesis** that the mean difference between the work experience of males and females is 0. This finding definately endangers our earlier assumption that the difference in mean salaries of males and females is due to some inherent bias (gender disparity at workplace). However, after this analysis we can say that one of the reasons for lower salaries of females is the lesser work experience as comapred to that of men (a case of correlation not causation).
 
-## Relationship Salary - Experience ?
+### Relationship Salary - Experience ?
 
 ```{r, salary_exp_scatter}
 #making a scatter plot of the experience and salary of employees
@@ -363,7 +365,7 @@ omega %>%
   NULL
 ```
 
-## Check correlations between the data
+### Checking the correlations between the data
 
 ```{r, ggpairs}
 #creating a correlation matrix to see the relationship between experience and salary seperately for men and women
@@ -373,15 +375,13 @@ omega %>%
   theme_bw()
 ```
 
-> Answer below
+> Inference 5:
 
 On a closer look, some of the possible inferencs are:
-
 1. The feamles appear to be at the lower level of jobs (interns, junior managers, etc) whereas the top managament is clustered with male.
-
 2. Concievably, the correlation between salary and experience is more for the females than males i.e. despite lesser work experience it is possible for males to have higher paying jobs.
 
-# Challenge 1: Brexit plot
+# Analysis 4 on the Brexit data
 
 ```{r replicate_brexit_plot}
 brexit <- read_csv(here::here('data', 'brexit_results.csv'))
@@ -415,18 +415,4 @@ plot
 
 ```
 
-# Deliverables
-
-There is a lot of explanatory text, comments, etc. You do not need these, so delete them and produce a stand-alone document that you could share with someone. Knit the edited and completed R Markdown file as an HTML document (use the "Knit" button at the top of the script editor window) and upload it to Canvas.
-
-# Details
-
-- Who did you collaborate with: Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni, Purva Sikri, Junna Yanai
-- Approximately how much time did you spend on this problem set: 8hrs
-- What, if anything, gave you the most trouble: Challenge 2
-
-**Please seek out help when you need it,** and remember the [15-minute rule](https://mam2022.netlify.app/syllabus/#the-15-minute-rule){target="_blank"}. You know enough R (and have enough examples of code from class and your readings) to be able to do this. If you get stuck, ask for help from others, post a question on Slack-- and remember that I am here to help too!
-
-> As a true test to yourself, do you understand the code you submitted and are you able to explain it to someone else?
-
-YES
+In collaboration with Lazar Jelic, Valeria Morales, Hanlu Lin, Hao Ni,and Junna Yanai
